---------------------------------------------------------------------------------------------------
Version: 1.4.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 2025-05-30
  Changes:
    - Description updated.
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 2025-05-30
  Changes:
    - Quality now affects enemies. Enemy spawners and worms are downgraded in quality by one 'crafting step'. Spawned units are also downgraded by an additional step compared to their spawner.
---------------------------------------------------------------------------------------------------
Version: 1.3.3
Date: 2025-05-15
  Bugfixes:
    - Corrected quality effects of inventory size bonus for armor and cargo bays, and duration for stickers.
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2025-05-14
  Changes:
    - New dependency on the mod Quality Cursor.
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2025-05-14
  Bugfixes:
    - Fixed that the 10% buff to crafting machine speeds was applied incorrectly.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2025-05-14
  Changes:
    - Broken-quality items are now level -3, improving mod compatibility.
    - Disabled the generation of meltdown recipes when pymodpack is installed.
  Info:
    - These changes mean the mod at least _boots_ with Py installed.
---------------------------------------------------------------------------------------------------
Version: 1.2.0-1.2.1
Date: 2025-05-12
  Changes:
    - Space Age is no longer a mandatory dependency!
  Changes:
    - The crafting time of meltdown recipes has been doubled so that the animation oscillates less.