@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.2
 Date: ????
-  Changes:
+  Graphics:
+    - Adjusted the positions of circuit connectors on the downgrade port.
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.1
 Date: 2025-05-30
